--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     on writing clean, efficient code and building scalable solutions while continuously learning new
                     technologies. Check out my projects and skills.</p>
 
-                <button><i class='bx bx-send'></i> Contact Me</button>
+                <button><a href="#contact"><i class='bx bx-send'></i> Contact Me</a></button>
             </div>
 
             <div class="skills-video-box ">
@@ -127,7 +127,7 @@
                     <video src="C:\Users\Admin\Downloads\videos\glob.mp4" autoplay loop muted plays-inline></video>
 
 
-                    <button><i class='bx bx-send'></i> Contact Me</button>
+                    <button><a href="#contact"><i class='bx bx-send'></i> Contact Me</a></button>
                 </div>
 
                 <div class="card">
@@ -261,7 +261,7 @@
                 </div>
             </div>
 
-            <div class="contact-box autoBlur" style="max-width:450px; color:white;">
+            <div class="contact-box autoBlur" id="contact" style="max-width:450px; color:white; padding>
                 <p style="max-width:400px; margin-top:30px; margin-bottom:5px;">Contact me for a Full Time job
                     opportunity.</p>
 
